# ethnode/webdht/wdht_ertapi.py
@@ -2,8 +2,144 @@ import json, bson
 from webdht.double_linked import DList, instance_dl
 from kadem.kad import DHTFacade
 from webdht.wdht import HashIO, OwnerGuidHashIO
-from toolkit.kadmini_codec import guid_bin_to_hex, guid_hex_to_bin
+from toolkit.kadmini_codec import guid_bin_to_hex, guid_hex_to_bin, guid_int_to_hex
 
+# todo DRY it
+
+
+class DhtGetByHkeyWebAPI(object):
+    exposed = True
+
+    def __init__(self, cherry,
+                 dhf: DHTFacade,
+                 # me_owner: HashIO,
+                 mount_point: str='/api/v1/dht/hkey/',
+                 mount_it=True):
+        self.cherry = cherry
+        self.dhf = dhf
+        self.mount_point = mount_point
+        if mount_it:
+            self.mount()
+            print('MOUNT WEB:', self.mount_point)
+
+    def GET(self, hkey):
+        t1 = self.dhf.pull_local('', hk_hex=hkey)
+        t2 = self.dhf.pull_remote('', hk_hex=hkey)
+        if t2:
+            t = t2
+        else:
+            t = t1
+        d = bson.loads(t[-1])
+        if 'e' in d:
+            l = d['e']
+            if len(l) >= 2:
+                v = l[1]
+                if 'value' in v:
+                    try:
+                        js = json.dumps(v['value']).encode()
+                        return js
+                    except:
+                        pass
+        return b'null'
+
+    def mount(self):
+        self.cherry.tree.mount(
+            self,
+            self.mount_point, {'/': {
+                    'request.dispatch': self.cherry.dispatch.MethodDispatcher(),
+                    'tools.sessions.on': True,
+                }
+            }
+        )
+
+
+class DhtGigsHkeysWebAPI(object):
+    exposed = True
+
+    def __init__(self, cherry,
+                 dhf: DHTFacade,
+                 me_owner: HashIO,
+                 mount_point: str='/api/v1/dht/gigs/',
+                 mount_it=True):
+        self.cherry = cherry
+        self.dhf = dhf
+        self.mount_point = mount_point
+        self.collection_name = '.gigs'
+        self.me = me_owner
+        self.mygigs = instance_dl(self.dhf, self.me.hex(), self.collection_name)
+        if mount_it:
+            self.mount()
+            print('MOUNT WEB:', self.mount_point)
+
+        self.required_fields = ('general_domain_of_expertise', 'title', 'description', 'price', 'required_ert')
+
+    def get_per_guid(self, owner_guid):
+        dl = instance_dl(self.dhf, owner_guid, self.collection_name)
+        ll = list(dl.iter_hk())
+        return ll
+
+    def GET(self, owner_guid=None):
+        if owner_guid:
+            ll = self.get_per_guid(owner_guid)
+            d_js = json.dumps(ll, ensure_ascii=False)
+            d_sj_bin = d_js.encode()
+            return d_sj_bin
+        else:
+            c = self.dhf.dht.storage.pubkeys.cursor.execute('SELECT bkey from ertref;')
+            guid_list = [guid_bin_to_hex(k[0]).decode() for k in c.fetchall()]
+            ll = list()
+            for guid in guid_list:
+                ll.append({guid: self.get_per_guid(guid)})
+            d_js = json.dumps(ll, ensure_ascii=False)
+            d_sj_bin = d_js.encode()
+            return d_sj_bin
+
+    def POST(self):
+        body = self.cherry.request.body.read()
+        data = {}
+        try:
+            # decode the body
+            body = body.decode()
+            data = json.loads(body)
+        except:
+            # todo improve whole-site err handling
+            print('ERR in DECODE data from body')
+            self.cherry.response.status = 409
+            return b'ERROR in decode parse'
+        for item in self.required_fields:
+            if item not in data:
+                print('REQUIRED FIELD', item)
+                s = 'ERROR %s field required!' % str(item)
+                return s.encode()
+
+        key = data['title']
+        data['owner_guid'] = self.me.hex()
+        data['model'] = 'Gig'
+        value = data
+        try:
+            o_item_hk = self.mygigs.insert(key=key, value=value)
+        except:
+            self.cherry.response.status = 409
+            return b'ERROR in insert'
+        self.cherry.response.status = 201
+        if o_item_hk:
+            try:
+                hex_str = guid_int_to_hex(o_item_hk)
+                return hex_str.encode()
+            except:
+                return b'ERROR converting hash key'
+        else:
+            return b'null'
+
+    def mount(self):
+        self.cherry.tree.mount(
+            self,
+            self.mount_point, {'/': {
+                    'request.dispatch': self.cherry.dispatch.MethodDispatcher(),
+                    'tools.sessions.on': True,
+                }
+            }
+        )
 
 
 class DhtGigsWebAPI(object):
@@ -12,7 +148,7 @@ class DhtGigsWebAPI(object):
     def __init__(self, cherry,
                  dhf: DHTFacade,
                  me_owner: HashIO,
-                 mount_point: str='/api/v1/dht/gigs/',
+                 mount_point: str='/api/v1/dht/gigsrender/',
                  mount_it=True):
         self.cherry = cherry
         self.dhf = dhf
@@ -64,14 +200,111 @@ class DhtGigsWebAPI(object):
                 print('REQUIRED FIELD', item)
 
         key = data['title']
+        data['owner_guid'] = self.me.hex()
+        data['model'] = 'Gig'
         value = data
         try:
-            self.mygigs.insert(key=key, value=value)
+            o_item_hk = self.mygigs.insert(key=key, value=value)
         except:
             self.cherry.response.status = 409
             return b'ERROR in inserting'
         self.cherry.response.status = 201
-        return b''
+        if o_item_hk:
+            try:
+                hex_str = guid_int_to_hex(o_item_hk)
+                return hex_str.encode()
+            except:
+                return b'ERROR converting hash key'
+        else:
+            return b'null'
+
+
+    def mount(self):
+        self.cherry.tree.mount(
+            self,
+            self.mount_point, {'/': {
+                    'request.dispatch': self.cherry.dispatch.MethodDispatcher(),
+                    'tools.sessions.on': True,
+                }
+            }
+        )
+
+
+class DhtPortfoliosWebAPI(object):
+    exposed = True
+
+    def __init__(self, cherry,
+                 dhf: DHTFacade,
+                 me_owner: HashIO,
+                 mount_point: str='/api/v1/dht/portfolios/',
+                 mount_it=True):
+        self.cherry = cherry
+        self.dhf = dhf
+        self.mount_point = mount_point
+        self.collection_name = '.portfolios'
+        self.me = me_owner
+        self.mygigs = instance_dl(self.dhf, self.me.hex(), self.collection_name)
+        if mount_it:
+            self.mount()
+            print('MOUNT WEB:', self.mount_point)
+
+        self.required_fields = ('title', 'description')
+
+    def get_per_guid(self, owner_guid):
+        dl = instance_dl(self.dhf, owner_guid, self.collection_name)
+        ll = list(dl.iter_hk())
+        return ll
+
+    def GET(self, owner_guid=None):
+        if owner_guid:
+            ll = self.get_per_guid(owner_guid)
+            d_js = json.dumps(ll, ensure_ascii=False)
+            d_sj_bin = d_js.encode()
+            return d_sj_bin
+        else:
+            c = self.dhf.dht.storage.pubkeys.cursor.execute('SELECT bkey from ertref;')
+            guid_list = [guid_bin_to_hex(k[0]).decode() for k in c.fetchall()]
+            ll = list()
+            for guid in guid_list:
+                ll.append({guid: self.get_per_guid(guid)})
+            d_js = json.dumps(ll, ensure_ascii=False)
+            d_sj_bin = d_js.encode()
+            return d_sj_bin
+
+    def POST(self):
+        body = self.cherry.request.body.read()
+        data = {}
+        try:
+            # decode the body
+            body = body.decode()
+            data = json.loads(body)
+        except:
+            # todo improve whole-site err handling
+            print('ERR in DECODE data from body')
+            self.cherry.response.status = 409
+            return b'ERROR in decode parse'
+        for item in self.required_fields:
+            if item not in data:
+                print('REQUIRED FIELD', item)
+
+        key = data['title']
+        data['owner_guid'] = self.me.hex()
+        data['model'] = 'Portfolio'
+        value = data
+        try:
+            o_item_hk = self.mygigs.insert(key=key, value=value)
+        except:
+            self.cherry.response.status = 409
+            return b'ERROR in inserting'
+        self.cherry.response.status = 201
+        if o_item_hk:
+            try:
+                hex_str = guid_int_to_hex(o_item_hk)
+                return hex_str.encode()
+            except:
+                return b'ERROR converting hash key'
+        else:
+            return b'null'
 
     def mount(self):
         self.cherry.tree.mount(
